unpackaged/objects/Program__c.object
<CustomObject>
  <description>USed to track DentsplySirona and other well known programs/memberships available</description>
  <fields>
    <fullName>External_Program_provider__c</fullName>
    <inlineHelpText>Add the association that provides the program</inlineHelpText>
    <label>External Program provider</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Program_Description__c</fullName>
    <inlineHelpText>Add a description of the program</inlineHelpText>
    <label>Program Description</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>non_DentsplySirona_program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if it is an external program</inlineHelpText>
    <label>non-DentsplySirona program</label>
    <type>Checkbox</type>
  </fields>
  <label>Program</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Program Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Programs</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>